fix issues on mobile display at home

--- a/themes/lugo/static/styles/style.css
+++ b/themes/lugo/static/styles/style.css
@@ -858,9 +858,14 @@ footer > img {
         flex-direction: column;
     } */
     body{
-        width: 100vw;
-        height: 100vh;
+        /* width: 100vw;
+        height: 100vh; */
         /* overflow: hidden; */
+    }
+
+    .year_selector_container{
+        flex-wrap: wrap;
+        max-width: 90dvw;
     }
 
     h1 {
